--- a/SimModule/SimModule.vcproj
+++ b/SimModule/SimModule.vcproj
@@ -285,6 +285,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\wLock.h"
+				>
+			</File>
+			<File
 				RelativePath=".\wRand.h"
 				>
 			</File>
