--- a/Sim/Sim.rc
+++ b/Sim/Sim.rc
@@ -96,22 +96,25 @@ BEGIN
     PUSHBUTTON      "Reset",IDC_RESET,6,30,112,30
     CONTROL         "CACHE_OFF",IDC_SETTING_CACHE,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,127,13,112,22
     CONTROL         "GROUP_OFF",IDC_SETTING_GROUP,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,127,38,112,22
-    RTEXT           "PeerCount :",IDC_STATIC,283,16,45,8
-    EDITTEXT        IDC_SETTING_PEERCOUNT,331,14,60,12,ES_CENTER | ES_NUMBER
-    RTEXT           "SearchContentCount :",IDC_STATIC,247,32,81,8
-    EDITTEXT        IDC_SETTING_SEARCHCONTENTCOUNT,331,30,60,12,ES_CENTER | ES_NUMBER
-    RTEXT           "GroupSize :",IDC_STATIC,283,48,45,8
-    EDITTEXT        IDC_SETTING_GROUPSIZE,331,46,60,12,ES_CENTER | ES_NUMBER
+    RTEXT           "MaxFloodHopCount:",IDC_STATIC,259,14,69,8
+    EDITTEXT        IDC_SETTING_MAXFLOODHOPCOUNT,331,12,60,12,ES_CENTER | ES_NUMBER
+    RTEXT           "PeerCount :",IDC_STATIC,283,26,45,8
+    EDITTEXT        IDC_SETTING_PEERCOUNT,331,24,60,12,ES_CENTER | ES_NUMBER
+    RTEXT           "SearchContentCount :",IDC_STATIC,247,38,81,8
+    EDITTEXT        IDC_SETTING_SEARCHCONTENTCOUNT,331,36,60,12,ES_CENTER | ES_NUMBER
+    RTEXT           "GroupSize :",IDC_STATIC,283,50,45,8
+    EDITTEXT        IDC_SETTING_GROUPSIZE,331,48,60,12,ES_CENTER | ES_NUMBER
     PUSHBUTTON      "Start",IDC_SETTING_START,400,12,86,48
+    LTEXT           "Step :                ",IDC_STEP,400,74,89,8
     LTEXT           "Statistics",IDC_STATIC,4,74,41,8
-    EDITTEXT        IDC_STATISTICS,0,84,493,257,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_STATISTICS,0,84,493,257,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
 END
 
 IDD_LOG_DIALOG DIALOGEX 0, 0, 494, 341
 STYLE DS_SETFONT | WS_CHILD
 FONT 9, "±¼¸²Ã¼", 400, 0, 0x0
 BEGIN
-    EDITTEXT        IDC_LOG,0,0,493,341,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_LOG,0,0,493,341,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
 END
 
 
